--- a/public/style.css
+++ b/public/style.css
@@ -7,6 +7,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   min-height: 100vh;
+  margin: 0;
 }
 
 /* Nav css start */
@@ -19,6 +20,8 @@ body {
 }
 
 .nav-bar {
+  margin-left: 0;
+  margin-right: 0;
   margin-bottom: 60px;
 }
 
