--- a/public/style.css
+++ b/public/style.css
@@ -7,7 +7,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   min-height: 100vh;
-  margin: 0;
+  /* margin: 0; */
 }
 
 /* Nav css start */
@@ -18,11 +18,14 @@ body {
   margin: 0;
   padding: 0;
 }
-
 .nav-bar {
   margin-left: 0;
   margin-right: 0;
   margin-bottom: 60px;
+}
+
+.nav {
+  margin-bottom: 125px;
 }
 
 a {
