pagination mostly there

--- a/public/style.css
+++ b/public/style.css
@@ -127,3 +127,24 @@ a:hover {
 #clearBtn {
   cursor: pointer;
 }
+.pagination {
+  display: flex;
+  list-style-type: none;
+  background-color: white;
+  border-radius: 5px;
+  justify-content: center;
+}
+
+.pagination-item > li {
+  color: #0b1426;
+  padding: 0.5rem;
+  text-decoration: bold;
+}
+.pagination > li.selected {
+  background-color: white;
+  color: white;
+  border-radius: 3px;
+  padding: 0.5rem;
+  font-size: 18px;
+  background-color: #11abda;
+}
