--- a/public/style.css
+++ b/public/style.css
@@ -203,3 +203,37 @@ a:hover {
   margin-left: 5px;
   /* border: 1px solid black; */
 }
+
+.profile {
+  position: relative;
+  top: 0;
+  left: 0;
+}
+
+.profile-header {
+  position: relative;
+  width: 100%;
+  height: 150px;
+  background-size: 100% 100%;
+  top: 0;
+  left: 0;
+  margin-bottom: 55px;
+  object-fit:cover;
+  object-position: middle center;
+  box-sizing: border-box;
+}
+
+#profile-image {
+  position: absolute;
+  height: 156px;
+  width: 156px;
+  top: 50px;
+  left: 30px;
+  border: 5px solid silver;
+  border-radius: 50%;
+  bottom: 0;
+  left: 50px;
+  box-shadow: inherit;
+  background-color:white;
+}
+
