--- a/public/style.css
+++ b/public/style.css
@@ -1,11 +1,11 @@
 * {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   min-height: 100vh;
   /* margin: 0; */
 }
@@ -218,7 +218,7 @@ a:hover {
   top: 0;
   left: 0;
   margin-bottom: 55px;
-  object-fit:cover;
+  object-fit: cover;
   object-position: middle center;
   box-sizing: border-box;
 }
@@ -234,6 +234,18 @@ a:hover {
   bottom: 0;
   left: 50px;
   box-shadow: inherit;
-  background-color:white;
+  background-color: white;
 }
 
+.sorters > button {
+  background-color: white;
+  border: none;
+  transition-duration: 0.4s;
+  height: 60px;
+  border-radius: 30px;
+}
+
+.sorters > button:hover {
+  background-color: #4ab5a3;
+  color: white;
+}
