--- a/public/style.css
+++ b/public/style.css
@@ -204,14 +204,36 @@ a:hover {
   /* border: 1px solid black; */
 }
 
+.profile-container {
+  display: flex;
+  justify-content: center;
+}
 .profile {
   position: relative;
-  top: 0;
-  left: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 70%;
+  align-items: center;
 }
 
-.profile-header {
-  position: relative;
+.profile-title {
+  font-size: 1.5em;
+  text-align: center;
+}
+
+.image-stack {
+  width: -webkit-fill-available;
+}
+.image-stack::after {
+  content: " ";
+  display: table;
+  clear: both;
+}
+
+#profile-header {
+  /* position: relative; */
+  /* float: center; */
   width: 100%;
   height: 150px;
   background-size: 100% 100%;
@@ -219,21 +241,35 @@ a:hover {
   left: 0;
   margin-bottom: 55px;
   object-fit:cover;
-  object-position: middle center;
   box-sizing: border-box;
 }
 
 #profile-image {
-  position: absolute;
+  /* position: fixed; */
+  float: left;
   height: 156px;
   width: 156px;
   top: 50px;
-  left: 30px;
+  left: calc(50% - 78px);
   border: 5px solid silver;
   border-radius: 50%;
   bottom: 0;
-  left: 50px;
   box-shadow: inherit;
   background-color:white;
+  /* margin-top: "20px"; */
+  margin-right: -50%;
+  margin-left: 0px;
+  /* padding-top:15%; */
+  position: relative;
+  z-index: 1;
+  font-size: 155px;
+  color: "#dfdfdf" 
 }
 
+.profile-list {
+  position: relative;
+  min-width: 50%;
+  max-width: 360px;
+  width: 100%;
+  flex: none
+}
