--- a/public/style.css
+++ b/public/style.css
@@ -1,13 +1,13 @@
 * {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   min-height: 100vh;
-  /* margin: 0; */
+  margin: 0;
 }
 
 /*  Home start */
@@ -55,6 +55,28 @@ body {
 
 /* Home end*/
 
+/* ChallengeDetails.js start*/
+
+/* the one below */
+.meditate-img-div {
+  background-image: url('../homeImgs/grapple-cycle-group.jpeg');
+  background-size: cover;
+  background-position: center;
+  padding: 13em;
+}
+
+.single-challenge-div {
+  padding: 50px;
+  background-color: black;
+}
+
+.single-challenge-bttns {
+  display: flex;
+  justify-content: center;
+}
+
+/* ChallengeDetails.js end*/
+
 /* Nav css start */
 
 .nav-logo {
@@ -66,11 +88,11 @@ body {
 .nav-bar {
   margin-left: 0;
   margin-right: 0;
-  margin-bottom: 60px;
+  margin-bottom: 50px;
 }
 
 .nav {
-  margin-bottom: 125px;
+  margin-bottom: 90px;
 }
 
 a {
