--- a/public/style.css
+++ b/public/style.css
@@ -7,7 +7,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   min-height: 100vh;
-  margin: 0;
+  /* margin: 0; */
 }
 
 /*  Home start */
