--- a/public/style.css
+++ b/public/style.css
@@ -312,3 +312,11 @@ a:hover {
   background-color: #4ab5a3;
   color: white;
 }
+
+
+
+.search{
+  margin-top: 30px;
+  margin-bottom: 10px;
+  margin-left: 12px;
+}
