--- a/public/style.css
+++ b/public/style.css
@@ -313,10 +313,8 @@ a:hover {
   color: white;
 }
 
-
-
-.search{
+.searchContainer{
   margin-top: 30px;
   margin-bottom: 10px;
-  margin-left: 12px;
+  margin-left: 50px;
 }
