--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,7 @@
 * {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  
 }
 
 body {
@@ -131,7 +132,7 @@ a {
 
 .search input {
   background-color: white;
-  border: 1px solid black;
+  /* border: 1px solid black; */
   border-radius: 2px;
   border-top-right-radius: 0px;
   border-bottom-right-radius: 0px;
@@ -317,4 +318,5 @@ a:hover {
   margin-top: 30px;
   margin-bottom: 10px;
   margin-left: 50px;
+border: white;
 }
