--- a/public/style.css
+++ b/public/style.css
@@ -1,13 +1,13 @@
 * {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   min-height: 100vh;
-  background-color: #271f1c;
+  /* background-color: #271f1c; */
   margin: 0;
 }
 
@@ -59,7 +59,7 @@ body {
 /* ChallengeDetails.js start*/
 
 .bike-img-div {
-  background-image: url('../homeImgs/grapple-cycle-group.jpeg');
+  background-image: url("../homeImgs/grapple-cycle-group.jpeg");
   /* background-size: 100%; */
   width: 100%;
   /* background-repeat: no-repeat; */
@@ -282,7 +282,7 @@ a:hover {
   width: -webkit-fill-available;
 }
 .image-stack::after {
-  content: ' ';
+  content: " ";
   display: table;
   clear: both;
 }
@@ -310,12 +310,12 @@ a:hover {
   bottom: 0;
   box-shadow: inherit;
   background-color: white;
-  margin-top: '20px';
+  margin-top: "20px";
   margin-right: -50%;
   position: relative;
   z-index: 1;
   font-size: 155px;
-  color: '#dfdfdf';
+  color: "#dfdfdf";
 }
 
 .profile-list {
